<resources>
    <string name="app_name">Quizudo</string>
    <string name="BUTTON_ACTION">0</string>
    <string name="title_quiz_activity">Quiz</string>
    <string name="configure_quiz_button">Next</string>
    <string name="next_question_button">Next Question</string>
    <string name="title_create_quiz_activity">Choose Questions</string>
    <string name="title_configure_quiz_activity">Configure Quiz</string>
    <string name="title_quiz_results_activity">Quiz Results</string>
    <string name="title_manage_questions_activity">Manage Questions</string>
    <string name="title_add_questions_activity">Download Question Packs</string>
    <string name="title_configure_download_site_activity">Configure Download Site</string>
    <string name="title_remove_question_packs_activity">Remove Question Packs</string>
    <string name="title_quiz_writer_activity">Create Questions</string>
    <string name="title_select_author_activity">Select Author</string>
    <string name="result_overlay_correct_heading">Correct!</string>
    <string name="result_overlay_incorrect_heading">Incorrect!</string>
    <string name="quiz_file_extension">.qzp</string>
    <string name="search_for_author">Search For Author: </string>
    <string name="answer_dialog_trivia_title">Did you know&#8230;</string>
    <string name="download_qp_dialog_message">Downloading&#8230;</string>
    <string name="tap_to_continue_text"> Tap to Continue</string>
    <string name="answer_pools_spinner_none_option">[NONE]</string>
    <string name="quiz_writer_correct_answer_field">Correct Answer</string>
    <string name="quiz_writer_question_text_field">Question Text</string>
    <string name="quiz_writer_answer_choices_field">Answer Choices (1 per line)</string>
    <string name="quiz_writer_trivia_field">Trivia</string>
    <string name="quiz_writer_topics_field">Topics</string>
    <string name="quiz_writer_answer_pool_label">Answer Pool</string>
    <string name="quiz_writer_default_answer_pool_field">Default Answer Pool</string>
    <string name="quiz_writer_use_default_ap_label">Use Default</string>
    <string name="quiz_writer_page_number">1</string>
    <string name="quiz_writer_question_pack_name_field">Question Pack Name</string>
    <string name="quiz_writer_question_pack_default_topics_field">Default Topics</string>
    <string name="quiz_writer_question_pack_description_field">Description</string>
    <string name="quiz_writer_answer_choices_1_field">Answer Choice 1</string>
    <string name="quiz_writer_answer_choices_2_field">Answer Choice 2</string>
    <string name="quiz_writer_answer_choices_3_field">Answer Choice 3</string>
    <string name="quiz_writer_answer_choices_4_field">Answer Choice 4</string>
    <string name="quiz_writer_answer_choices_5_field">Answer Choice 5</string>
    <string name="quiz_writer_first_button">&lt;&lt; </string>
    <string name="quiz_writer_previous_button">&lt;</string>
    <string name="quiz_writer_next_button">&gt;</string>
    <string name="quiz_writer_last_button">&gt;&gt;</string>
    <string name="quiz_writer_questions_title">Question %1$d </string>
    <string name="quiz_writer_save_question_pack_success">Question Pack saved with %1$s questions.</string>
    <string name="quiz_writer_save_question_pack_fail">Could not save the Question Pack</string>
    <string name="quiz_writer_save_question_pack_unable">No Questions to Save</string>
    <string name="begin_quiz_button_label">Begin Quiz</string>
    <string name="configure_quiz_questions_found_default">No questions were found from the selected Question Packs. Using default question set, maximum quiz length is %1$d questions.</string>
    <string name="configure_quiz_questions_found">No questions were found from the selected Question Packs. Using default question set.</string>
    <string name="configure_quiz_questions_maximum_found">%1$d questions loaded.</string>
    <string name="configure_quiz_single_question_found">1 question loaded.</string>
    <string name="main_activity_start_quiz_button">New Quiz</string>
    <string name="manage_questions_button_text">Manage Questions</string>
    <string name="next_question_button_finish">Finish</string>
    <string name="download_site_label">Download Site</string>
    <string name="test_connection_button">Test Connection</string>
    <string name="quiz_activity_title">Question %1$d of %2$d</string>
    <string name="about_menu_item">About app</string>
    <string name="single_correct_answer_result_message">The correct answer was: &#160;</string>
    <string name="multiple_correct_answer_result_message">The correct answers were: \n</string>
    <string name="no_correct_answer_result_message">There was no correct answer! </string>
    <string name="instant_result_on_submit_checkbox">Result displayed after answer submitted</string>
    <string name="submit_answers_on_touch_checkbox">Submit answers on touch</string>
    <string name="number_of_questions_label">Number of Questions\n(%1$d max.)</string>
    <string name="quiz_completed_heading">Quiz Completed!</string>
    <string name="quiz_results_score_message">You answered %1$d out of %2$d questions correctly.</string>
    <string name="quiz_results_you_scored">You scored:</string>
    <string name="quiz_results_statistic">%1$d/%2$d</string>
    <string name="correct_answer_icon_description">Correct Answer</string>
    <string name="default_answer_icon_description">Icon displaying correct or incorrect answer</string>
    <string name="incorrect_answer_icon_description">Incorrect Answer</string>
    <string name="menu_item_title_home">Home</string>
    <string name="menu_item_title_save">Save</string>
    <string name="menu_item_title_retry">Retry</string>
    <string name="menu_item_title_about">About App</string>
    <string name="about_app_title">Quizudo</string>
    <string name="about_app_version">Version 1.6</string>
    <string name="about_app_created_by">Created by John Crawley</string>
    <string name="about_app_year">2017, 2018</string>
    <string name="no_items_found">No items found</string>
    <string name="default_result_row_question_text">Question Text not found</string>
    <string name="default_result_row_question_answer">Correct Answer not found</string>
    <string name="default_number_of_questions">10</string>
    <string name="number_must_be_specified">You must specify a valid number</string>
    <string name="results_message_less_than_twenty">Oh well, please try again.</string>
    <string name="results_message_less_than_forty">Nice try, you will do better next time!</string>
    <string name="results_message_less_than_fifty">You got nearly half of the questions correct!</string>
    <string name="results_message_less_than_sixty">Good effort! You can improve further, don\'t give up!</string>
    <string name="results_message_less_than_seventy">Not a bad result at all, play again soon.</string>
    <string name="results_message_less_than_eighty">Good result, well done!</string>
    <string name="results_message_less_than_ninty">Great result, you really know your stuff!</string>
    <string name="results_message_less_than_perfect">Congratulations, what an excellent result!</string>
    <string name="toast_message_generator_imported_success">Generator Imported</string>
    <string name="toast_message_generator_imported_fail">There was a problem with the file, import failed</string>
    <string name="results_message_none_correct">Too bad, you didn\'t get any questions right this time around. Better luck next time.</string>
    <string name="results_message_perfect">Congratulations, a perfect score!! You beat the quiz!!</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="title_activity_downoad_questions">DownoadQuestionsActivity</string>
    <string name="select_author_name_tag">Author Name</string>
    <string name="select_author_quick_list_tag">Quick List</string>
    <string name="add_question_packs_menu_item">Add Question Packs</string>
    <string name="delete_question_packs_menu_item">Delete Question Packs</string>
    <string name="configure_download_site_menu_item">Configure Download Site</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="button_search_for_author">Search</string>
    <string name="question_not_found">Question not found.</string>
    <string name="files_deleted"> "%1$d Question Packs Deleted"</string>
    <string name="file_deleted"> "Question Pack Deleted"</string>
    <string name="no_question_packs_found"> No quiz files found on local storage </string>
    <string name="test_connection_good"> Connection successful</string>
    <string name="test_connection_bad"> The selected site doesn\'t seem to host the Quizudo service</string>
    <string name="test_connection_error"> There was a problem connecting to the site</string>
    <string name="test_connection_network_error"> There was a network issue when attempting to connect to the site</string>
    <string name="test_connection_network_down"> Please ensure that you are connected to the network and try again</string>
    <string name="user_not_found_message"> Unable to locate the specified user on the specified server</string>
    <string name="server_error">There is a problem with the server, cannot complete request.</string>
    <string name="server_error_message">There is a problem with the server, unable to complete request.</string>
    <string name="author_has_no_question_packs">There are no question packs currently available from this author.</string>
    <string name="delete_question_packs_button">Remove Selected</string>
    <string name="download_question_packs_button">Download Selected</string>
    <string name="download_complete_toast">%1$d question packs downloaded</string>
    <string name="single_download_complete_toast">Question pack download complete</string>
    <string name="title_activity_manage_questions_settings">Manage Questions</string>
    <string name="loading_questions">Loading Questions&#8230;</string>
    <string name="loading_dialogue">Loading&#8230;</string>
    <string name="remove_author_dialog_text">Remove author %1$s from the quicklist?</string>
    <string name="remove_answer_dialog_text">Remove answer %1$s from the answer pool?</string>
    <string name="remove_answer_pool_dialog_text">Delete answer pool %1$s?</string>
    <string name="remove_author_yes_button">Yes</string>
    <string name="remove_author_no_button">No</string>
    <string name="resume_quiz_button_label">Resume Quiz</string>
    <string name="add_question_set_textfield_label">Create a new Question Set</string>
    <string name="generate_questions_button_text">Generate Questions</string>
    <string name="generator_question_pack_textfield_text">Question Pack Name</string>
    <string name="create_question_pack_preference_title">Create Question Packs</string>
    <string name="create_question_pack_preference_summary">Create your own questions and save them in a question pack</string>
    <string name="create_question_pack_express_preference_title">Create Question Packs Express Mode</string>
    <string name="create_question_pack_preference_express_summary">A quicker way to generate questions</string>
    <string name="download_question_packs_preference_title">Download Question Packs</string>
    <string name="download_question_packs_preference_summary">Download question packs from a specified server</string>
    <string name="remove_question_packs_preference_summary">Permanently remove question packs from your device</string>
    <string name="answer_pools_preferences_title">Answer Pools</string>
    <string name="answer_pools_preference_summary">Create lists of answers that can be used in questions</string>
    <string name="new_quiz_button_text">NEW QUIZ</string>
    <string name="options_button_text">OPTIONS</string>
    <string name="title_image_description">Quizudo</string>
    <string name="ads_unit_id"></string>
</resources>