<?xml version="1.0" encoding="utf-8"?>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".express.generatorsdetail.GeneratorDetailActivity">

        <include layout="@layout/app_toolbar" android:id="@+id/included_toolbar"/>



        <TextView
            android:id="@+id/noResultsFoundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/no_items_found"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/included_toolbar">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/generatorNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:hint="@string/add_question_set_textfield_label"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="24"/>

        </android.support.design.widget.TextInputLayout>




        <ListView
            android:id="@+id/list1"
            android:isScrollContainer="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/questionPackNameInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/questionPackNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/questionPackNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/generator_question_pack_textfield_text" />

        <Button
            android:id="@+id/generateQuestionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_questions_button_text"
            android:layout_weight="1" />
    </android.support.design.widget.TextInputLayout>





    </android.support.constraint.ConstraintLayout>